--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,50 @@
     transform: rotate(360deg);
   }
 }
+
+#header{
+  padding-top: 20px;
+}
+
+#todo{
+  display: flex;
+  justify-content: center;
+  gap: 60px;
+  padding-top: 30px;
+}
+#TextInput{
+  width: 20%;
+  background-color: lightgreen;
+  border: none;
+  border-radius:5px;
+}
+
+#button{
+  padding-right:20px;
+  padding-left: 20px;
+  border-radius: 10px;
+  color: whitesmoke;
+  background-color: green;
+  border: none;
+}
+#status{
+  font-size: large;
+}
+#text{
+  font-weight: 700;
+  color: red;
+}
+.section{
+  display: flex;
+  justify-content: center;
+   gap: 60%;
+   margin-top: 20px;
+}
+
+#card-name{
+  background-color: lightgreen;
+  box-shadow: 15px 15px 10px hsl(120, 2%, 8%) ;
+  
+}
+
+
